Fix colors to comply with WCAG 2.1 contrast ratio
Lighthouse says that background and foreground colors do not have a
sufficient contrast ratio for the old values.

Google Chrome's color picker was used to manually adjust the contract
ratio.

--- a/_sass/dash/_base.scss
+++ b/_sass/dash/_base.scss
@@ -155,7 +155,7 @@ code {
   @include relative-font-size(0.9375);
   border-radius: 0.3em;
   @include themed() {
-     background-color: $color-background-dark;
+     background-color: $color-background-lighter;
      color: $color-foreground;
   }
 }
