--- a/_sass/dash/_colors.scss
+++ b/_sass/dash/_colors.scss
@@ -1,6 +1,6 @@
 $color-background-dark: #1E2227;
 $color-background-darker: #15171A;
-$color-foreground: #DAE4ED;
+$color-foreground: #1E2227;
 $color-foreground-dark: lighten($color-background-dark, 30%);
 
 $color-background-light: #DAE4ED;
@@ -8,14 +8,14 @@ $color-background-lighter: lighten($color-background-light, 7%);
 $color-foreground-dark: #1E2227;
 $color-foreground-darker: #15171A;
 
-$color-pink: #F24784;
+$color-pink: #CA0048;
 $color-red: #FC4957;
 $color-orange: #EA9D53;
-$color-yellow: #FCBC28;
+$color-yellow: #865D00;
 $color-teal: #4BC997;
-$color-green: #50BD6A;
+$color-green: #00751C;
 $color-cyan: #4FC1E4;
-$color-blue: #637AFE;
+$color-blue: #425DFB;
 $color-indigo: #6775C4;
 $color-purple: #8E59D7;
 
